--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "effi-js-lib": "ssh://git@bitbucket.org:baloon-workspace/effi-js-lib.git",
+    "mobx": "^6.3.9",
+    "mobx-react": "^7.2.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
