--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "effi-js-lib": "ssh://git@bitbucket.org:baloon-workspace/effi-js-lib.git",
@@ -35,6 +36,7 @@
     "mini-css-extract-plugin": "^2.4.5",
     "mobx": "^6.3.9",
     "mobx-react": "^7.2.1",
+    "moment": "^2.29.1",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
