--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "effi-js-lib": "ssh://git@bitbucket.org:baloon-workspace/effi-js-lib.git",
+    "effi-js-lib": "ssh://git@github.com:remillary/effi_lib.git",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-webpack-plugin": "^3.1.1",
